tratamento de dados

--- a/Exercicios/aula006/ex003.html
+++ b/Exercicios/aula006/ex003.html
@@ -26,6 +26,12 @@
 
        // + para adição e para concatenação = string concatena e  number soma.
 
+       /* s.length //quantos caracteres a string tem
+       // s.toUpperCase() // tudo para maiusculas
+       // s.toLowerCase() // tudo para minusculas */
+
+
+
     </script>
 </body>
 </html>
